--- a/docs/css/app.css
+++ b/docs/css/app.css
@@ -2,25 +2,29 @@ callout {
 	background-color: #a3404e;
 }
 .top-bar {
-	background-color: #e22b2b;
+	background-color: #bbb;
 }
 .top-bar ul {
-	background-color: #e22b2b;
+	background-color: #bbb;
 }
 .top-bar ul a {
 	color: #fff;
 }
 .top-bar a {
-	color: #ff;
+	color: #fff;
+}
+.side-logo {
+	margin-top: .75rem;
+	margin-bottom: .75rem;
 }
 .off-canvas {
-	background-color: #012c57;
-	width: 150px;
-	border-right: 15px solid #555;
+	background-color: #005B99;
+	width: 175px;
+	border-right: 10px solid #c2213F;
 }
 .off-canvas a {
 	color: #fff;
-	text-align: center;
+	text-align: left;
 }
 .off-canvas a:hover {
 	color: #cdcdcd;
@@ -60,6 +64,12 @@ callout {
 	text-decoration: underline;
 	font-size: .8rem;
 }
+.gantry-nav-blue {
+	background-color: #005B99;
+}
+/* Remove or Replace all DHA styles */
+/* Remove or Replace all DHA styles */
+/* Remove or Replace all DHA styles */
 .dhared {
 	background-color: #a3404e;
 }
@@ -98,7 +108,9 @@ callout {
 	height: 100%;
 	display: block;
 }
-
+/* Remove or Replace all DHA styles */
+/* Remove or Replace all DHA styles */
+/* Remove or Replace all DHA styles */
 footer {
 	margin-top: 14%;
 }
@@ -113,102 +125,85 @@ label.pop {
 	font-size: 1.25 rem;
 }
 
-/* Live Chat Pop Up styles below */
-@charset "UTF-8";
-.contact-panel-button {
-  background: #0a0a0a;
-  color: #fefefe;
-  width: auto;
-  padding: 0.25rem 1.25rem;
-  text-align: center;
-  position: absolute;
-  top: -30px;
-  right: 20px;
-  transition: background 0.25s ease-in-out;
+.glogo {
+	color: #fff;
+	font-size: 3rem;
+	font-weight: 800;
+	text-align: center;}
+.right {
+	float: right;
+	padding-right: 1.5rem;}
+.button.success {
+	background-color: #4aa564;
+	color: #fff; }
+.button.success:hover, .button.success:focus {
+  background-color: #238C00;
+  color: #fff; }
+
+.table-started, .table-started>td, .table-started>th {
+	background-color: #c3e6cb;}
+.table-hover .table-started:hover{
+	background-color:#b1dfbb}
+.table-hover .table-started:hover>td,.table-hover .table-started:hover>th{
+	background-color:#b1dfbb}
+
+.table-frozen, .table-frozen>td, .table-frozen>th {
+	background-color: #bee5eb;}
+.table-hover .table-frozen:hover{
+	background-color:#abdde5}
+.table-hover .table-frozen:hover>td,.table-hover .table-frozen:hover>th{
+	background-color:#abdde5}	
+
+.table-stopped, .table-stopped>td, .table-stopped>th {
+	background-color: #e28f8f;}
+.table-hover .table-stopped:hover{
+	background-color:#f1b0b7}
+.table-hover .table-stopped:hover>td,.table-hover .table-stopped:hover>th{
+	background-color:#f1b0b7}
+
+table a {
+	color: #000;}
+
+table i {
+	padding: 0 .5rem;}
+
+table th, table th:hover {
+	background-color: #012c57;
+	color: #fff;
+}
+.started {
+	color: #ffffff;
+	background-color: #4aa564;
+}
+.enabled {
+	color: #4aa564;
+}
+.missing {
+	color: #3850a5;
+}
+.required {
+	color: #e82a2a;
 }
 
-.contact-panel-button:after {
-  content: "";
-  margin-left: 5px;
-}
-
-.contact-panel-button:hover {
-  background: #242424;
-  color: #f0f0f0;
-}
-
-.is-active .contact-panel-button:after {
-  content: "";
-}
-
-.contact-panel {
-  padding: 1rem;
-  z-index: 1;
-  background: #ccc;
-  border: #0a0a0a;
-  border-radius: 0px;
-  width: 350px;
-  height: 375px;
-  position: fixed;
-  bottom: -375px;
-  right: 20px;
-  transition: bottom 0.5s ease-in-out;
-}
-
-.contact-panel label {
-  color: #222;
-  width: 100%;
-}
-
-.contact-panel input[type="text"],
-.contact-panel input[type="email"],
-.contact-panel textarea {
-  background: #fff;
-  border: #0a0a0a;
-  transition: background 0.3s ease-in-out;
-}
-
-.contact-panel input[type="text"]:focus,
-.contact-panel input[type="email"]:focus,
-.contact-panel textarea:focus {
-  background: #fefefe;
-}
-
-.contact-panel .contact-panel-actions {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-justify-content: flex-end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.contact-panel .submit-button {
-  margin-bottom: 0;
-}
-
-.contact-panel .cancel-button {
-  margin-bottom: 0;
-  padding: 0.75rem 1rem;
-  color: #888;
-  transition: background 0.25s ease-in-out;
-}
-
-.contact-panel .cancel-button:hover {
-  background: #999;
-  color: #f0f0f0;
-}
-
-.contact-panel.is-active {
-  bottom: 0;
-}
-
-@media screen and (max-width: 39.9375em) {
-  .contact-panel {
-    width: 100%;
-    right: 0;
-  }
-}
+.accordion-title {
+  position: relative;
+  display: block;
+  padding: 1.25rem 1rem 1.25rem 3rem;
+  border: 1px solid #e6e6e6;
+  border-bottom: 0;
+  font-size: 0.75rem;
+  line-height: 1;
+  color: #1779ba; }
+  :last-child:not(.is-active) > .accordion-title {
+    border-bottom: 1px solid #e6e6e6;
+    border-radius: 0 0 0 0; }
+  .accordion-title:hover, .accordion-title:focus {
+    background-color: #e6e6e6; }
+  .accordion-title::before {
+    position: absolute;
+    top: 50%;
+    left: 1rem;
+    margin-top: -0.5rem;
+    content: '+'; }
+  .is-active > .accordion-title::before {
+    content: '\2013'; }
